--- a/docs/single-spa/10.Concept Parcel.md
+++ b/docs/single-spa/10.Concept Parcel.md
@@ -1,4 +1,9 @@
-# 包裹
+---
+layout: default
+title:  包裹
+parent: single-spa
+nav_order: 9
+---
 
 *包裹是 single-spa 的高级功能。我们建议您将应用程序用作架构中的主要微前端类型。看[this explanation](https://single-spa.js.org/docs/module-types) 更多细节*
 
