--- a/docs/single-spa/2.single-spa示例.md
+++ b/docs/single-spa/2.single-spa示例.md
@@ -1,4 +1,10 @@
-# single-spa示例
+---
+layout: default
+title:  single-spa示例
+parent: single-spa
+nav_order: 2
+---
+
 
 ## 核心团队示例[#](https://single-spa.js.org/docs/examples/#core-team-examples)
 
