--- a/docs/single-spa/3.创建single-spa.md
+++ b/docs/single-spa/3.创建single-spa.md
@@ -1,4 +1,9 @@
-# 创建single-spa中心
+---
+layout: default
+title:  创建single-spa中心
+parent: single-spa
+nav_order: 3
+---
 
 对于那些喜欢为webpack，babel，jest等自动生成和管理配置的人，Single-spa提供了一个CLI。您不必为了使用Single-spa而使用CLI。
 
