--- a/docs/single-spa/5.single-spa 微前端类型.md
+++ b/docs/single-spa/5.single-spa 微前端类型.md
@@ -1,3 +1,10 @@
+---
+layout: default
+title:  微前端类型
+parent: single-spa
+nav_order: 5
+---
+
 # 概念：single-spa 微前端类型[#](https://single-spa.js.org/docs/module-types#concept-single-spa-microfrontend-types)
 
 single-spa具有[不同类别](https://single-spa.js.org/docs/microfrontends-concept/#types-of-microfrontends)的微前端。这取决于您在何处以及如何使用它们中的每一个。但是，single-spa 核心团队有[建议](https://single-spa.js.org/docs/recommended-setup/#applications-versus-parcels-versus-utility-modules)。
