--- a/docs/single-spa/7.构建single-spa中心应用程序.md
+++ b/docs/single-spa/7.构建single-spa中心应用程序.md
@@ -1,4 +1,10 @@
-# Building single-spa applications
+---
+layout: default
+title:  构建 single-spa 应用程序
+parent: single-spa
+nav_order: 7
+---
+
 
 single-spa注册的应用程序与普通 SPA 相同，只是它没有 HTML 页面。在single-spa世界中，您的 SPA 包含许多已注册的应用程序，其中每个应用程序都有自己的框架。注册的应用程序有自己的客户端路由和自己的框架/库。它们呈现自己的 HTML，并且在*装载*时可以完全自由地做任何想做的事情。被*挂载*的概念是指注册的应用程序是否将内容放在 DOM 上。决定一个注册的应用程序是否被挂载的是它的[activity function](https://single-spa.js.org/docs/building-applications/configuration#activity-function). 每当*未安装*已注册的应用程序时，它应保持完全休眠状态，直到安装为止。
 
