--- a/docs/single-spa/8.拆分应用.md
+++ b/docs/single-spa/8.拆分应用.md
@@ -1,4 +1,10 @@
-# 拆分应用程序
+---
+layout: default
+title:  拆分应用程序
+parent: single-spa
+nav_order: 8
+---
+
 
 在大型微服务系统中，您的根single-spa 配置和每个应用程序可能应该有自己的 git 存储库。在 JavaScript 项目中如何做到这一点不一定很清楚，所以下面列出了一些选项。
 
