--- a/docs/single-spa/9.迁移现有 SPA.md
+++ b/docs/single-spa/9.迁移现有 SPA.md
@@ -1,4 +1,10 @@
-# 迁移现有 SPA
+---
+layout: default
+title:  迁移现有 SPA
+parent: single-spa
+nav_order: 9
+---
+
 
 如果您有兴趣将现有 SPA 迁移到single-spa，您需要做三件事：
 
